--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "i18next": "^23.11.4",
     "lottie-react-native": "6.7.0",
     "moment": "^2.30.1",
+    "mqtt": "^5.7.3",
     "react": "18.2.0",
     "react-i18next": "^14.1.1",
     "react-native": "0.74.1",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
