--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lottie-react-native": "6.7.0",
     "moment": "^2.30.1",
     "mqtt": "^5.7.3",
+    "paho-mqtt": "^1.1.0",
     "react": "18.2.0",
     "react-i18next": "^14.1.1",
     "react-native": "0.74.1",
@@ -36,6 +37,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-mqtt-client": "^0.0.1",
+    "react-native-paho-mqtt": "^0.1.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
