--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-async-storage/root": "github:react-native-async-storage/async-storage",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.5.2",
-    "@react-native-picker/picker": "^2.7.7",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/material-top-tabs": "^6.6.13",
@@ -25,43 +25,63 @@
     "@types/react": "~18.2.79",
     "axios": "^1.6.8",
     "buffer": "^6.0.3",
-    "expo": "^51.0.0",
+    "expo": "~51.0.24",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.14",
     "expo-checkbox": "~3.0.0",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
-    "expo-notifications": "~0.28.9",
+    "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
+    "expo-location": "~17.0.1",
+    "expo-notifications": "^0.28.14",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
-    "i18next": "^23.11.4",
+    "i18n-js": "^4.4.3",
+    "i18next": "^23.14.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "intl-pluralrules": "^2.0.1",
     "lottie-react-native": "6.7.0",
     "moment": "^2.30.1",
     "mqtt": "^5.8.0",
     "paho-mqtt": "^1.1.0",
     "process": "^0.11.10",
     "react": "18.2.0",
-    "react-i18next": "^14.1.1",
+    "react-i18next": "^14.1.3",
     "react-native": "^0.74.3",
     "react-native-camera": "^4.2.1",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-elements": "^3.4.3",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-localize": "^3.2.1",
+    "react-native-maps": "1.14.0",
     "react-native-modal-selector": "^2.1.2",
     "react-native-mqtt": "^0.1.0-beta4",
     "react-native-mqtt-client": "^0.0.1",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-paho-mqtt": "^0.1.1",
     "react-native-paper": "^5.12.3",
     "react-native-permissions": "^4.1.5",
+    "react-native-picker-select": "^9.3.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.33.0",
-    "react-native-svg": "^15.2.0",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.1.0",
-    "typescript": "~5.3.3"
+    "react-native-webview": "13.8.6",
+    "react-native-wheel-picker-expo": "^0.5.4",
+    "typescript": "~5.3.3",
+    "uuid": "^10.0.0",
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
