--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-async-storage/root": "github:react-native-async-storage/async-storage",
+    "@react-native-community/blur": "^4.4.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -19,7 +21,7 @@
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/material-top-tabs": "^6.6.13",
-    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.79",
@@ -29,24 +31,28 @@
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.14",
     "expo-checkbox": "~3.0.0",
+    "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
     "expo-location": "~17.0.1",
-    "expo-notifications": "^0.28.14",
+    "expo-notifications": "^0.28.16",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
     "i18n-js": "^4.4.3",
     "i18next": "^23.14.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "intl-pluralrules": "^2.0.1",
+    "lodash.throttle": "^4.1.1",
     "lottie-react-native": "6.7.0",
     "moment": "^2.30.1",
     "mqtt": "^5.8.0",
     "paho-mqtt": "^1.1.0",
     "process": "^0.11.10",
+    "qrcode": "^1.5.4",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "^14.1.3",
     "react-native": "^0.74.3",
     "react-native-camera": "^4.2.1",
@@ -58,6 +64,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.2.1",
     "react-native-maps": "1.14.0",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-selector": "^2.1.2",
     "react-native-mqtt": "^0.1.0-beta4",
     "react-native-mqtt-client": "^0.0.1",
@@ -73,16 +80,16 @@
     "react-native-screens": "^3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.5.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "react-native-wheel-picker-expo": "^0.5.4",
     "typescript": "~5.3.3",
     "uuid": "^10.0.0",
-    "react-native-web": "~0.19.10",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.3",
-    "expo-file-system": "~17.0.1"
+    "expo-task-manager": "~11.8.2",
+    "expo-background-fetch": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
